# sel4-program-template

./: .gitignore  .gitmodules  project-CMakeLists.txt.template  readme.md  settings.cmake
projects/hello/: CMakeLists.txt
projects/hello/src/: mian.c
projects/thread/: CMakeLists.txt
projects/thread/src/: main.c
